# hevy-guide-cli

./: LICENSE  README.md  pyproject.toml
app/: heavy_api.py  main.py
assets/: hevy_api_schema.json  muscles.json  plan.txt  routine.json  template.json
assets/jeff/: hevy_map.csv  prompt.txt  week1_workout.json  week2_workout.json  week3_workout.json  week4_workout.json  week5_workout.json  week6_workout.json  week7_workout.json  week8_workout.json  week9_workout.json
test/: check_plan.py  convert_jeff_hevy.py  plan.txt  plan_hevy.txt  score.py
